Multithread AVIF PoC

--- a/codecs/avif/Makefile
+++ b/codecs/avif/Makefile
@@ -53,7 +53,6 @@ LIBAOM_FLAGS = -DCMAKE_BUILD_TYPE=Release \
 	-DENABLE_TOOLS=0 \
 	-DCONFIG_ACCOUNTING=1 \
 	-DCONFIG_INSPECTION=0 \
-	-DCONFIG_MULTITHREAD=0 \
 	-DCONFIG_RUNTIME_CPU_DETECT=0 \
 	-DCONFIG_WEBM_IO=0
 
@@ -65,6 +64,7 @@ $(OUT_ENC_JS): $(OUT_ENC_CPP) $(LIBAOM_ENC_OUT) $(CODEC_ENC_OUT)
 	$(CXX) \
 		-I $(CODEC_ENC_DIR)/include \
 		${EMSCRIPTEN_FLAGS} \
+		-pthread \
 		-s 'EXPORT_NAME="$(basename $(@F))"' \
 		-o $@ \
 		$+
@@ -96,6 +96,7 @@ $(LIBAOM_ENC_OUT): $(LIBAOM_ENC_DIR)/CMakeLists.txt
 		$(LIBAOM_FLAGS) \
 		-DCONFIG_AV1_DECODER=0 \
 		-DCONFIG_AV1_HIGHBITDEPTH=0 \
+		-DCONFIG_MULTITHREAD=1 \
 		../ && \
 	$(MAKE)
 
@@ -105,6 +106,7 @@ $(LIBAOM_DEC_OUT): $(LIBAOM_DEC_DIR)/CMakeLists.txt
 	emcmake cmake \
 		$(LIBAOM_FLAGS) \
 		-DCONFIG_AV1_ENCODER=0 \
+		-DCONFIG_MULTITHREAD=0 \
 		../ && \
 	$(MAKE)
 
