First bit of real UI code landed

--- a/package.json
+++ b/package.json
@@ -10,29 +10,31 @@
     "serve": "serve --config server.json .tmp/build/static"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
     "@surma/rollup-plugin-off-main-thread": "^1.4.1",
-    "@types/node": "^14.10.1",
+    "@types/node": "^14.11.2",
     "comlink": "^4.3.0",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
+    "file-drop-element": "^1.0.0",
     "husky": "^4.3.0",
-    "lint-staged": "^10.3.0",
+    "lint-staged": "^10.4.0",
     "lodash.camelcase": "^4.3.0",
-    "postcss": "^7.0.32",
+    "postcss": "^7.0.34",
     "postcss-import": "^12.0.1",
     "postcss-modules": "^3.2.2",
     "postcss-nested": "^4.2.3",
     "postcss-simple-vars": "^5.0.2",
     "postcss-url": "^8.0.0",
-    "preact": "^10.4.8",
+    "preact": "^10.5.0",
     "preact-render-to-string": "^5.1.10",
-    "prettier": "^2.1.1",
-    "rollup": "^2.26.11",
+    "prettier": "^2.1.2",
+    "rollup": "^2.28.1",
     "rollup-plugin-terser": "^7.0.2",
     "serve": "^11.3.2",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.3"
   },
   "husky": {
     "hooks": {
