--- a/package.json
+++ b/package.json
@@ -73,5 +73,8 @@
     "webpack-cli": "3.3.4",
     "webpack-dev-server": "3.8.0",
     "worker-plugin": "3.1.0"
+  },
+  "dependencies": {
+    "wasm-feature-detect": "^1.2.6"
   }
 }
