--- a/codecs/oxipng/Cargo.toml
+++ b/codecs/oxipng/Cargo.toml
@@ -9,7 +9,7 @@ publish = false
 crate-type = ["cdylib"]
 
 [dependencies]
-oxipng = { version = "3.0.0", default-features = false, features = ["parallel"] }
+oxipng = { version = "3.0.0", default-features = false }
 wasm-bindgen = "0.2.64"
 log = { version = "0.4", features = ["release_max_level_off"] }
 rayon = { version = "1.3.0", optional = true }
@@ -24,4 +24,4 @@ opt-level = "s"
 parallel = ["oxipng/parallel", "rayon", "crossbeam-channel", "once_cell"]
 
 [package.metadata.wasm-pack.profile.release]
-wasm-opt = ["-O", "--no-validation"]
+wasm-opt = false
