--- a/codecs/oxipng/Cargo.toml
+++ b/codecs/oxipng/Cargo.toml
@@ -16,6 +16,10 @@ rayon = { version = "1.3.0", optional = true }
 once_cell = { version = "1.3.1", optional = true }
 crossbeam-channel = { version = "0.4.2", optional = true }
 
+[patch.crates-io]
+# TODO: replace with upstream version once https://github.com/shssoichiro/oxipng/pull/327 is merged.
+oxipng = { git = "https://github.com/RReverser/oxipng", branch = "crossbeam" }
+
 [profile.release]
 lto = true
 opt-level = "s"
@@ -24,4 +28,4 @@ opt-level = "s"
 parallel = ["oxipng/parallel", "rayon", "crossbeam-channel", "once_cell"]
 
 [package.metadata.wasm-pack.profile.release]
-wasm-opt = false
+wasm-opt = ["-O", "--no-validation"]
