Prerender & client render of intro

--- a/generic-tsconfig.json
+++ b/generic-tsconfig.json
@@ -16,6 +16,7 @@
     "paths": {
       "static-build/*": ["src/static-build/*"],
       "client/*": ["src/client/*"],
+      "shared/*": ["src/shared/*"],
       "features/*": ["src/features/*"]
     }
   }
