Service worker building (but not quite right yet)

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "del": "^5.1.0",
     "file-drop-element": "^1.0.1",
     "husky": "^4.3.0",
+    "idb-keyval": "^3.2.0",
     "lint-staged": "^10.4.0",
     "lodash.camelcase": "^4.3.0",
+    "mime-types": "^2.1.27",
     "postcss": "^7.0.34",
     "postcss-modules": "^3.2.2",
     "postcss-nested": "^4.2.3",
