Explicitly disable HDR only for encoder

--- a/codecs/avif/Makefile
+++ b/codecs/avif/Makefile
@@ -34,6 +34,7 @@ $(OUT_ENC_JS): $(OUT_ENC_CPP) $(CODEC_PACKAGE) $(LIBAOM_DIR)/CMakeLists.txt
 		LIBAOM_FLAGS="\
 			-DCONFIG_AV1_DECODER=0 \
 			-DCONFIG_MULTITHREAD=0 \
+			-DCONFIG_AV1_HIGHBITDEPTH=0 \
 		"
 
 $(OUT_ENC_MT_JS): $(OUT_ENC_CPP) $(CODEC_PACKAGE) $(LIBAOM_DIR)/CMakeLists.txt
@@ -44,6 +45,7 @@ $(OUT_ENC_MT_JS): $(OUT_ENC_CPP) $(CODEC_PACKAGE) $(LIBAOM_DIR)/CMakeLists.txt
 		OUT_CPP=$< \
 		LIBAOM_FLAGS="\
 			-DCONFIG_AV1_DECODER=0 \
+			-DCONFIG_AV1_HIGHBITDEPTH=0 \
 		" \
 		OUT_FLAGS="-pthread"
 
