--- a/cli/package.json
+++ b/cli/package.json
@@ -17,6 +17,9 @@
     "web-streams-polyfill": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "commander": "^6.0.0",
