--- a/cli/package.json
+++ b/cli/package.json
@@ -24,6 +24,8 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "commander": "^6.0.0",
     "json5": "^2.1.3",
+    "kleur": "^4.1.3",
+    "ora": "^5.1.0",
     "rollup": "^2.26.11",
     "rollup-plugin-terser": "^7.0.2"
   }
