Update jpeg-xl to latest upstream

--- a/codecs/jxl/Makefile
+++ b/codecs/jxl/Makefile
@@ -1,5 +1,5 @@
 CODEC_URL = https://gitlab.com/wg1/jpeg-xl.git
-CODEC_VERSION = 7a2f362aba73f1f7b25347737304f80acf2490ed
+CODEC_VERSION = c8ce59f8ef6393ba3018917791d04662cbf1172a
 CODEC_DIR = node_modules/jxl
 CODEC_BUILD_DIR := $(CODEC_DIR)/build
 CODEC_OUT := $(CODEC_BUILD_DIR)/libjpegxl-static.a
@@ -32,8 +32,8 @@ all: $(OUT_JS)
 		$(CODEC_BUILD_DIR)/third_party/brotli/libbrotlidec-static.a \
 		$(CODEC_BUILD_DIR)/third_party/brotli/libbrotlienc-static.a \
 		$(CODEC_BUILD_DIR)/third_party/brotli/libbrotlicommon-static.a \
-		$(CODEC_BUILD_DIR)/third_party/liblcms2.a \
-		$(CODEC_BUILD_DIR)/third_party/highway/libhwy.a 
+		$(CODEC_BUILD_DIR)/third_party/libskcms.a \
+		$(CODEC_BUILD_DIR)/third_party/highway/libhwy.a
 
 $(CODEC_OUT): $(CODEC_DIR)/CMakeLists.txt
 	mkdir -p $(CODEC_BUILD_DIR)
@@ -41,21 +41,20 @@ $(CODEC_OUT): $(CODEC_DIR)/CMakeLists.txt
 	emcmake cmake ../ && \
 	$(MAKE) jpegxl-static
 
-
 $(CODEC_DIR)/CMakeLists.txt: $(CODEC_DIR)
 
 $(CODEC_DIR):
 	# The JXL repository doesn’t have version tags or anything yet,
 	# so we have to pin to a specific commit for now. This implies we
 	# can’t use --recursive, as we will change commit after checkout (it
-	# seems you can’t clone a specific commit directly), and it also means 
+	# seems you can’t clone a specific commit directly), and it also means
 	# we can’t use --depth 1 because we want to change commits.
-	# The JXL code base also relies on submodules so we can’t just download 
+	# The JXL code base also relies on submodules so we can’t just download
 	# a .tar.gz from GitLab.
 	mkdir -p $@
 	git clone $(CODEC_URL) $@
 	cd $@ && \
-	git checkout -b squoosh-build $(CODEC_VERSION) && \
+	git reset --hard $(CODEC_VERSION) && \
 	git submodule update --init --recursive
 
 clean:
