Try out new flags for building only AVIF encoder/decoder
See the discussion in https://github.com/AOMediaCodec/libavif/issues/254 where this was implemented.

This allows us to avoid using ERROR_ON_UNDEFINED_SYMBOLS and build a truly separate encoder/decoder libs.

--- a/codecs/avif/Makefile
+++ b/codecs/avif/Makefile
@@ -1,4 +1,4 @@
-CODEC_URL = https://github.com/AOMediaCodec/libavif/archive/v0.8.1.tar.gz
+CODEC_URL = https://github.com/AOMediaCodec/libavif/archive/31d7c6d1e32cf467ac24fb8c7a76c4902a4c00db.tar.gz
 CODEC_PACKAGE = node_modules/libavif.tar.gz
 
 LIBAOM_URL = https://aomedia.googlesource.com/aom/+archive/v2.0.0.tar.gz
@@ -35,7 +35,8 @@ $(OUT_ENC_JS): $(OUT_ENC_CPP) $(CODEC_PACKAGE) $(LIBAOM_DIR)/CMakeLists.txt
 			-DCONFIG_AV1_DECODER=0 \
 			-DCONFIG_MULTITHREAD=0 \
 			-DCONFIG_AV1_HIGHBITDEPTH=0 \
-		"
+		" \
+		LIBAVIF_FLAGS="-DAVIF_CODEC_AOM_DECODE=0"
 
 $(OUT_ENC_MT_JS): $(OUT_ENC_CPP) $(CODEC_PACKAGE) $(LIBAOM_DIR)/CMakeLists.txt
 	$(MAKE) \
@@ -47,6 +48,7 @@ $(OUT_ENC_MT_JS): $(OUT_ENC_CPP) $(CODEC_PACKAGE) $(LIBAOM_DIR)/CMakeLists.txt
 			-DCONFIG_AV1_DECODER=0 \
 			-DCONFIG_AV1_HIGHBITDEPTH=0 \
 		" \
+		LIBAVIF_FLAGS="-DAVIF_CODEC_AOM_DECODE=0" \
 		OUT_FLAGS="-pthread"
 
 $(OUT_DEC_JS): $(OUT_DEC_CPP) $(CODEC_PACKAGE) $(LIBAOM_DIR)/CMakeLists.txt
@@ -58,7 +60,8 @@ $(OUT_DEC_JS): $(OUT_DEC_CPP) $(CODEC_PACKAGE) $(LIBAOM_DIR)/CMakeLists.txt
 		LIBAOM_FLAGS="\
 			-DCONFIG_AV1_ENCODER=0 \
 			-DCONFIG_MULTITHREAD=0 \
-		"
+		" \
+		LIBAVIF_FLAGS="-DAVIF_CODEC_AOM_ENCODE=0"
 
 $(CODEC_PACKAGE):
 	mkdir -p $(@D)
