--- a/src/features/processors/resize/client/tsconfig.json
+++ b/src/features/processors/resize/client/tsconfig.json
@@ -7,6 +7,7 @@
   "include": [
     "./*.ts",
     "../../../../client/lazy-app/util.ts",
+    "../../../../client/lazy-app/Compress/index.tsx",
     "../shared/*.ts"
   ],
   "references": [{ "path": "../shared" }]
