--- a/src/features/encoders/browserJPEG/client/tsconfig.json
+++ b/src/features/encoders/browserJPEG/client/tsconfig.json
@@ -7,6 +7,7 @@
   "include": [
     "./*.ts",
     "../../../../client/lazy-app/util.ts",
+    "../../../../client/lazy-app/worker-bridge/index.ts",
     "../shared/*.ts"
   ],
   "references": [{ "path": "../shared" }]
