Probably should include the client code in the client

--- a/client-tsconfig.json
+++ b/client-tsconfig.json
@@ -7,6 +7,7 @@
   "include": [
     "src/features/**/client/**/*",
     "src/features/**/shared/**/*",
-    "src/shared/**/*"
+    "src/shared/**/*",
+    "src/client/**/*"
   ]
 }
