--- a/codecs/wp2/Makefile
+++ b/codecs/wp2/Makefile
@@ -1,20 +1,30 @@
 CODEC_URL = https://chromium.googlesource.com/codecs/libwebp2/+archive/c90b5b476004c9a98731ae1c175cebab5de50fbf.tar.gz
 CODEC_DIR = node_modules/wp2
-CODEC_BUILD_DIR := $(CODEC_DIR)/.build
-CODEC_OUT := $(CODEC_BUILD_DIR)/libwebp2.a
+CODEC_BUILD_ROOT := $(CODEC_DIR)/build
+CODEC_BASELINE_BUILD_DIR := $(CODEC_BUILD_ROOT)/baseline
+CODEC_MT_BUILD_DIR := $(CODEC_BUILD_ROOT)/mt
+CODEC_MT_SIMD_BUILD_DIR := $(CODEC_BUILD_ROOT)/mt-simd
 
-OUT_JS = enc/wp2_enc.js dec/wp2_dec.js
-OUT_WASM = $(OUT_JS:.js=.wasm)
+OUT_JS = enc/wp2_enc.js enc/wp2_enc_mt.js enc/wp2_enc_mt_simd.js dec/wp2_dec.js
+OUT_WASM := $(OUT_JS:.js=.wasm)
+OUT_WORKER := $(OUT_JS:.js=.worker.js)
 
 .PHONY: all clean
 
 all: $(OUT_JS)
 
-%.js: %.cpp $(CODEC_OUT)
-	$(CXX) \
-		-I $(CODEC_DIR) \
-		${CXXFLAGS} \
-		${LDFLAGS} \
+# Define dependencies for all variations of build artifacts.
+$(filter enc/%,$(OUT_JS)): enc/wp2_enc.o
+$(filter dec/%,$(OUT_JS)): dec/wp2_dec.o
+enc/wp2_enc.js dec/wp2_dec.js: $(CODEC_BASELINE_BUILD_DIR)/libwebp2.a
+enc/wp2_enc_mt.js: $(CODEC_MT_BUILD_DIR)/libwebp2.a
+enc/wp2_enc_mt_simd.js: $(CODEC_MT_SIMD_BUILD_DIR)/libwebp2.a
+# Link multithreaded builds with -pthread.
+enc/wp2_enc_mt.js enc/wp2_enc_mt_simd.js: LDFLAGS+=-pthread
+
+$(OUT_JS):
+	$(LD) \
+		$(LDFLAGS) \
 		--bind \
 		--closure 1 \
 		-s ALLOW_MEMORY_GROWTH=1 \
@@ -26,25 +36,43 @@ all: $(OUT_JS)
 		-o $@ \
 		$+
 
-$(CODEC_OUT): $(CODEC_BUILD_DIR)/Makefile
-	cd $(CODEC_BUILD_DIR) && \
-	$(MAKE)
+%.o: %.cpp $(CODEC_DIR)/CMakeLists.txt
+	$(CXX) \
+		$(CXXFLAGS) \
+		-I $(CODEC_DIR) \
+		-o $@ \
+		$<
 
-$(CODEC_BUILD_DIR)/Makefile: $(CODEC_DIR)/CMakeLists.txt
-	mkdir -p $(CODEC_BUILD_DIR)
-	cd $(CODEC_BUILD_DIR) && \
+%/libwebp2.a: %/Makefile
+	$(MAKE) -C $(@D)
+
+# Disable SIMD for non-SIMD builds.
+$(CODEC_BASELINE_BUILD_DIR)/Makefile $(CODEC_MT_BUILD_DIR)/Makefile: CMAKE_FLAGS+=-DWP2_ENABLE_SIMD=0
+
+# Disable threads for the single-threaded build.
+$(CODEC_BASELINE_BUILD_DIR)/Makefile: CMAKE_FLAGS+=-DCMAKE_DISABLE_FIND_PACKAGE_Threads=1
+
+# The line below should be unnecessary in the future.
+# See https://github.com/emscripten-core/emscripten/issues/12714 for -msimd128.
+# See https://github.com/emscripten-core/emscripten/issues/12746 for -msse4.2.
+$(CODEC_MT_SIMD_BUILD_DIR)/Makefile: CXXFLAGS+=-msimd128 -msse4.2
+
+%/Makefile: $(CODEC_DIR)/CMakeLists.txt
 	emcmake cmake \
-		-DWP2_ENABLE_SIMD=0 \
+		$(CMAKE_FLAGS) \
 		-DWP2_BUILD_TESTS=0 \
 		-DWP2_ENABLE_TESTS=0 \
 		-DWP2_BUILD_EXAMPLES=0 \
 		-DWP2_BUILD_EXTRAS=0 \
-		../
+		-B $(@D) \
+		$(<D)
 
 $(CODEC_DIR)/CMakeLists.txt:
 	mkdir -p $(CODEC_DIR)
 	curl -sL $(CODEC_URL) | tar xz -C $(CODEC_DIR)
 
 clean:
-	$(RM) $(OUT_JS) $(OUT_WASM)
-	$(MAKE) -C $(CODEC_BUILD_DIR) clean
+	$(RM) $(OUT_JS) $(OUT_WASM) $(OUT_WORKER)
+	$(MAKE) -C $(CODEC_BASELINE_BUILD_DIR) clean
+	$(MAKE) -C $(CODEC_MT_BUILD_DIR) clean
+	$(MAKE) -C $(CODEC_MT_SIMD_BUILD_DIR) clean
