--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-replace": "^2.3.3",
+    "@rollup/plugin-replace": "^2.3.4",
     "@surma/rollup-plugin-off-main-thread": "^1.4.1",
-    "@types/node": "^14.11.5",
+    "@types/node": "^14.14.7",
     "comlink": "^4.3.0",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
@@ -22,7 +22,7 @@
     "husky": "^4.3.0",
     "idb-keyval": "^3.2.0",
     "linkstate": "^1.1.1",
-    "lint-staged": "^10.4.0",
+    "lint-staged": "^10.5.1",
     "lodash.camelcase": "^4.3.0",
     "mime-types": "^2.1.27",
     "pointer-tracker": "^2.4.0",
@@ -31,13 +31,14 @@
     "postcss-nested": "^4.2.3",
     "postcss-simple-vars": "^5.0.2",
     "postcss-url": "^8.0.0",
-    "preact": "^10.5.4",
-    "preact-render-to-string": "^5.1.10",
+    "preact": "^10.5.5",
+    "preact-render-to-string": "^5.1.11",
     "prettier": "^2.1.2",
-    "rollup": "^2.28.2",
+    "pretty-bytes": "^5.4.1",
+    "rollup": "^2.33.1",
     "rollup-plugin-terser": "^7.0.2",
     "serve": "^11.3.2",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.5"
   },
   "husky": {
     "hooks": {
