--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,18 @@
     "jsx": "react",
     "jsxFactory": "h",
     "allowJs": false,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "codecs/*": [
+        "codecs/*"
+      ]
+    }
   },
   "exclude": [
     "src/sw/**/*",
-    "src/codecs/processor-worker/**/*"
+    "src/codecs/processor-worker/**/*",
+    ".cache",
+    "public",
+    "node_modules"
   ]
 }
