--- a/codecs/oxipng/Cargo.toml
+++ b/codecs/oxipng/Cargo.toml
@@ -12,7 +12,20 @@ crate-type = ["cdylib"]
 oxipng = { version = "3.0.0", default-features = false }
 wasm-bindgen = "0.2.64"
 log = { version = "0.4", features = ["release_max_level_off"] }
+rayon = { version = "1.3.0", optional = true }
+once_cell = { version = "1.3.1", optional = true }
+crossbeam-channel = { version = "0.4.2", optional = true }
+
+[patch.crates-io]
+# TODO: replace with upstream version once https://github.com/shssoichiro/oxipng/pull/327 is merged.
+oxipng = { git = "https://github.com/RReverser/oxipng", branch = "crossbeam" }
 
 [profile.release]
 lto = true
 opt-level = "s"
+
+[features]
+parallel = ["oxipng/parallel", "rayon", "crossbeam-channel", "once_cell"]
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ["-O", "--no-validation"]
