--- a/codecs/wp2/Makefile
+++ b/codecs/wp2/Makefile
@@ -22,6 +22,7 @@ all: $(OUT_JS)
 		-s TEXTDECODER=2 \
 		-s ENVIRONMENT='worker' \
 		-s EXPORT_ES6=1 \
+		-s EXPORT_NAME="$(basename $(@F))" \
 		-o $@ \
 		$+
 
