--- a/codecs/oxipng/Cargo.toml
+++ b/codecs/oxipng/Cargo.toml
@@ -5,13 +5,23 @@ authors = ["Ingvar Stepanyan <me@rreverser.com>"]
 edition = "2018"
 publish = false
 
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ["-O", "--no-validation"]
+
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
-oxipng = { version = "4.0.0", default-features = false }
-wasm-bindgen = "0.2.64"
-log = { version = "0.4", features = ["release_max_level_off"] }
-rayon = { version = "1.3.0", optional = true }
-once_cell = { version = "1.3.1", optional = true }
-crossbeam-channel = { version = "0.4.2", optional = true }
+oxipng = { version = "4.0.0", default-features = false, features = ["libdeflater"] }
+wasm-bindgen = "0.2.68"
+log = { version = "0.4.11", features = ["release_max_level_off"] }
+rayon = { version = "1.5.0", optional = true }
+once_cell = { version = "1.5.2", optional = true }
+crossbeam-channel = { version = "0.5.0", optional = true }
+
+[profile.release]
+lto = true
+opt-level = "s"
+
+[features]
+parallel = ["oxipng/parallel", "rayon", "crossbeam-channel", "once_cell"]
