--- a/worker-tsconfig.json
+++ b/worker-tsconfig.json
@@ -5,6 +5,7 @@
   },
   "include": [
     "src/features/**/worker/**/*",
+    "src/features/**/sub-worker/**/*",
     "src/features/**/shared/**/*",
     "src/features/worker-utils/**/*",
     "src/features-worker/**/*",
