--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "rollup": "^2.33.1",
     "rollup-plugin-terser": "^7.0.2",
     "serve": "^11.3.2",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "which": "^2.0.2"
   },
   "husky": {
     "hooks": {
