Update JXL to v0.1.

--- a/codecs/jxl/Makefile
+++ b/codecs/jxl/Makefile
@@ -1,5 +1,5 @@
 CODEC_URL = https://gitlab.com/wg1/jpeg-xl.git
-CODEC_VERSION = 4d70bd58fbcb758b61446aba447fedd9177a00c9
+CODEC_VERSION = v0.1
 CODEC_DIR = node_modules/jxl
 CODEC_BUILD_DIR := $(CODEC_DIR)/build
 CODEC_OUT := $(CODEC_BUILD_DIR)/lib/libjxl.a
@@ -51,18 +51,8 @@ $(CODEC_OUT): $(CODEC_DIR)/CMakeLists.txt
 $(CODEC_DIR)/CMakeLists.txt: $(CODEC_DIR)
 
 $(CODEC_DIR):
-	# The JXL repository doesn’t have version tags or anything yet,
-	# so we have to pin to a specific commit for now. This implies we
-	# can’t use --recursive, as we will change commit after checkout (it
-	# seems you can’t clone a specific commit directly), and it also means
-	# we can’t use --depth 1 because we want to change commits.
-	# The JXL code base also relies on submodules so we can’t just download
-	# a .tar.gz from GitLab.
 	mkdir -p $@
-	git clone $(CODEC_URL) $@
-	cd $@ && \
-	git reset --hard $(CODEC_VERSION) && \
-	git submodule update --init --recursive
+	git clone $(CODEC_URL) --recursive -j`nproc` --depth 1 --branch $(CODEC_VERSION) $@
 
 clean:
 	$(RM) $(OUT_JS) $(OUT_WASM)
