--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "rollup -c && node lib/move-output.js",
     "debug": "node --inspect-brk node_modules/.bin/rollup -c",
-    "dev": "rollup -cw & npm run serve",
+    "dev": "run-p watch serve",
+    "watch": "rollup -cw",
     "serve": "serve --config server.json .tmp/build/static"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "lint-staged": "^10.5.1",
     "lodash.camelcase": "^4.3.0",
     "mime-types": "^2.1.27",
+    "npm-run-all": "^4.1.5",
     "pointer-tracker": "^2.4.0",
     "postcss": "^7.0.35",
     "postcss-modules": "^3.2.2",
