--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "debug": "node --inspect-brk node_modules/.bin/rollup -c",
     "dev": "run-p watch serve",
     "watch": "rollup -cw",
-    "serve": "serve --config server.json .tmp/build/static"
+    "serve": "serve --config ../../../serve.json .tmp/build/static"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.1.0",
