--- a/codecs/oxipng/Cargo.toml
+++ b/codecs/oxipng/Cargo.toml
@@ -12,7 +12,8 @@ wasm-opt = ["-O", "--no-validation"]
 crate-type = ["cdylib"]
 
 [dependencies]
-oxipng = { version = "4.0.0", default-features = false, features = ["libdeflater"] }
+oxipng = { version = "4.0.1", default-features = false, features = ["libdeflater"] }
+libdeflater = { version = "0.6.0", features = ["freestanding"] }
 wasm-bindgen = "0.2.68"
 log = { version = "0.4.11", features = ["release_max_level_off"] }
 rayon = { version = "1.5.0", optional = true }
